--- a/index.html
+++ b/index.html
@@ -4,25 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Dog API Example</title>
+    <title>Dog API Example 2</title>
     <link rel="shortcut icon" href="">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="container">
-        <h1>Dog API: A Simple Example</h1>
-
+        <h1>Dog API: Displaying on the Page</h1>
         <form>
-          <!--<input type="submit" value="Get a dog pic!">-->
           <fieldset>
-              <label for="how-many">How many dogs would you like to print to the console?:</label>
+              <label for="how-many">How many dogs would you like to display?:</label>
               <input type="number" name="how-many" id="how-many" placeholder="3" value="3" required min="1" max="50"/>
               <button>Submit</button>
           </fieldset>
         </form>
         <section class="results hidden">
-          <!--<h2>Look at this dog!</h2>-->
-          <!--<img class="results-img" alt="placeholder">-->
+          <h2>Look at the dogs!</h2>
+          <img id="results-img" class="dog-img" alt="placeholder">
         </section>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
