--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
               <button>Submit</button>
           </fieldset>
         </form>
+
         <section class="results hidden">
-          <h2>Look at the dogs!</h2>
-          <img id="results-img" class="dog-img" alt="placeholder">
+          <h2>Look at these random dogs!</h2>
+          <div id="results-img"></div>
         </section>
+
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <script src="index.js"></script>
